<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">智能流量链</string>
    <string name="home_guanli_str_info">管理属于您的数字钱包</string>
    <string name="home_create_wallet">创建钱包</string>
    <string name="home_import_wallet">导入钱包</string>

    <string name="create_wallet_input_name">请输入钱包名称</string>
    <string name="create_wallet_setpsd1">请设置钱包密码</string>
    <string name="create_wallet_set_psd2">请确认钱包密码</string>
    <string name="create_wallet_info_tips">支持 8~16 位，可使用英文大小写、数字、特殊字符。</string>
    <string name="create_wallet_ok">确定</string>
    <string name="create_wallet_title">创建钱包</string>
    <string name="create_wallet_fram_name">钱包%1$s</string>
    <string name="create_psd_nosaom">密码不一致</string>
    <string name="js_error_info">密码错误，请重新尝试</string>
    <string name="back_title">备份助记词</string>
    <string name="back_ac_tips">备份提示</string>
    <string name="back_ac_info">掌握助记词即拥有资产所有权</string>
    <string name="back_ac_t1">正确抄写助记词，可在需要时重新导入该钱包</string>
    <string name="back_ac_t2">离线保管，保障资产安全</string>
    <string name="back_ac_t3">切勿截屏保存，可能会造成资产损失</string>
    <string name="back_ac_btn">下一步</string>

    <string name="back_ac_ok_title">备份确认</string>
    <string name="back_ac_ok_info">请正确抄写并妥善保管助记词</string>
    <string name="back_ac_ok_ok">下一步</string>

    <string name="back_ac_ok2_title">备份确认</string>
    <string name="back_ac_ok_worderro">助记词顺序不正确</string>
    <string name="back_ac_ok_wallet_have">钱包已经存在了</string>
    <string name="back_ac_ok2_info">请按照顺序选择助记词，以验证备份的准确性</string>
    <string name="back_ac_ok2_ok">完成</string>
    <string name="import_wallet_title">导入钱包</string>
    <string name="import_wallet_zhujici">助记词</string>
    <string name="import_wallet_miyao">密钥</string>
    <string name="import_wallet_error_key">无效密钥</string>
    <string name="import_wallet_error_zhujic">无效助记词</string>
    <string name="import_wallet_haveq">钱包已经存在了</string>
    <string name="import_wallet_psd_error">密码不一致</string>
    <string name="import_wallet_carmar_p">二维码扫描需要给予摄像头权限</string>
    <string name="import_wallet_input_key">请输入密钥</string>
    <string name="import_wallet_info_tips">仅可使用TMCWallet生态的密钥</string>
    <string name="import_wallet_setps_tips">设置钱包密码</string>
    <string name="import_wallet_psd1">请输入钱包密码</string>
    <string name="import_wallet_psd2">请确认钱包密码</string>
    <string name="import_wallet_psd_info">支持8~16位，可使用英文大小写、数字、特殊字符</string>
    <string name="import_wallet_save">保存</string>

    <string name="main_table_zichan">资产</string>
    <string name="main_table_jiaoyi">交易</string>
    <string name="main_table_mine">我的</string>
    <string name="main_asset_shouxin">授信</string>
    <string name="main_asset_shouxin_cancel">取消授信</string>
    <string name="main_asset_zichan">资产</string>
    <string name="main_asset_num">数量</string>
    <string name="main_mine_guanli">钱包管理</string>
    <string name="main_mine_abouu">关于我们</string>
    <string name="main_mine_langue">语言选择</string>
    <string name="main_dialog_cancle">取消</string>
    <string name="dialog_psd_close">关闭</string>
    <string name="dialog_psd_title">钱包密码</string>
    <string name="dialog_psd_input_psd">请输入钱包密码</string>
    <string name="dialog_psd_ok">确定</string>
    <string name="asset_bi_title">转账</string>
    <string name="asset_bi_zichanbuzu">资产不足，无法转账</string>
    <string name="asset_bi_pleate_wiht">请稍等转账</string>
    <string name="asset_bi_dongjie">冻结 </string>
    <string name="asset_bi_keyong">可用</string>
    <string name="asset_bi_jiaoyi_jilu">交易记录</string>
    <string name="asset_bi_zhuchuan">转出</string>
    <string name="asset_bi_zhuabi">转出</string>
    <string name="asset_bi_please">请稍等</string>
    <string name="zhuanchu_skf_pre">收款方</string>
    <string name="zhuanchu_tips">转出金额</string>
    <string name="zhuanchu_all">全部</string>
    <string name="zhuanchu_beizhu">Memo</string>
    <string name="zhuanchu_btn_str">提交</string>
    <string name="dialog_psd_error">密码输入错误</string>
    <string name="zhuanchu_addres_eorr">无效地址</string>
    <string name="zhuanchu_fee">手续费：%s M</string>
    <string name="zichan_list_zhuanchu">转出</string>
    <string name="zichan_list_zhuanru">转入</string>
    <string name="zichan_list_success">成功</string>
    <string name="zichan_list_fail">失败</string>
    <string name="zichan_detail_title">详情</string>
    <string name="zichan_detail_copy_success">复制成功</string>
    <string name="zichan_detail_success_staue">成功</string>
    <string name="zichan_detail_shoukuanfang">收款方</string>
    <string name="zichan_detail_fukuanafng">付款方</string>
    <string name="zichan_detail_faxingfang">发行方</string>
    <string name="zichan_detail_faxingshang">发行商</string>
    <string name="zichan_detail_jine">金额</string>
    <string name="zichan_detail_currency">币种</string>
    <string name="zichan_detail_fee">手续费</string>
    <string name="zichan_detail_jiaoyi_leixa">交易类型</string>
    <string name="zichan_detail_stutae">状态</string>
    <string name="zichan_detail_hash">交易哈希</string>
    <string name="zichan_detail_block">区块</string>
    <string name="zichan_detail_tiime">时间</string>
    <string name="zichan_detail_beizhu">Memo</string>

    <string name="wallet_list_title">钱包列表</string>
    <string name="wallet_adss_title">钱包地址</string>
    <string name="wallet_adss_key">密钥</string>
    <string name="wallet_pic_save">保存成功</string>
    <string name="wallet_pic_tips_info">需要给予存储文件权限</string>
    <string name="wallet_save_xc_pic">保存到相册</string>
    <string name="wallet_save_copy_add">复制地址</string>
    <string name="wallet_key_title">密钥</string>
    <string name="wallet_key_cp">复制密钥</string>
    <string name="wallet_tips_warn">请务必妥善保管密钥。一旦丢失，将无法找回</string>
    <string name="wallet_l_s_title">钱包管理</string>
    <string name="wallet_l_s_gl">管理</string>
    <string name="about_us">关于我们</string>
    <string name="about_new_info">已经是最新版本了</string>
    <string name="about_ws_tk">服务条款</string>
    <string name="about_ws_wt">常见问题</string>
    <string name="about_ws_visoninfo">版本信息</string>
    <string name="add_zichan_title">添加资产</string>
    <string name="wallet_no_action">请通过他人转账激活钱包</string>
    <string name="wallet_cancel_success">取消授信成功</string>
    <string name="wallet_shouxi_success">授信成功</string>
    <string name="shouxin_xuzhi">须知：</string>
    <string name="shouxin_tips_all">1.接收转账前需已资产授信。每次授信将冻结 0.0005 M。 \n2.资产余额为 0 时，可取消授信。</string>
    <string name="ad_title_info">添加</string>
    <string name="reset_jy_psd">重设钱包密码</string>
    <string name="reset_jy_psd_nosome">钱包密码不一致</string>
    <string name="reset_psd_key_ero">密钥不是当前钱包</string>
    <string name="reset_jy_in_key">请输入密钥</string>
    <string name="reset_jy_key_tips">请输入8~16位新密码</string>
    <string name="reset_jy_agin_psd">请再次输入新密码</string>
    <string name="reset_jy_tisps">支持 8~16 位，可使用英文大小写、数字、特殊字符。</string>
    <string name="reset_jy_save">保存</string>
    <string name="my_psd_title">修改钱包密码</string>
    <string name="my_psd_no_some">钱包密码不一致</string>
    <string name="my_psd_old_p1">请输入原密码</string>
    <string name="my_psd_new_1">请输入8~16位新密码</string>
    <string name="my_psd_new_2">请再次输入新密码</string>
    <string name="my_psd_tips">支持 8~16 位，可使用英文大小写、数字、特殊字符。</string>
    <string name="my_psd_save">保存</string>
    <string name="my_wellet_name_title">修改钱包名称</string>
    <string name="my_wellet_name_input">请输入钱包名</string>
    <string name="my_wellet_name_save">确定</string>

    <string name="header_pulldown">下拉可以刷新</string>
    <string name="header_refreshing">正在刷新...</string>
    <string name="header_loading">正在加载...</string>
    <string name="header_release">释放立即刷新</string>
    <string name="header_finish">刷新完成</string>
    <string name="header_failed">刷新失败</string>
    <string name="header_lasttime">上次更新 M-d HH:mm</string>

    <string name="footer_pullup">上拉加载更多</string>
    <string name="footer_release">释放立即加载</string>
    <string name="footer_refreshing">正在刷新...</string>
    <string name="footer_loading">正在加载...</string>
    <string name="footer_finish">加载完成</string>
    <string name="footer_failed">加载失败</string>
    <string name="footer_allloaded">没有更多数据了</string>
    <string name="wallet_cha_key">查看密钥</string>
    <string name="wallet_mdf_psdf">修改钱包密码</string>
    <string name="wallet_forg_psdf">忘记钱包密码</string>
    <string name="wallet_daochu_zhujic">导出助记词</string>
    <string name="about_us_ifon">关于我们</string>
    <string name="walle_da_0_no">资产大于0，无法取消授信</string>
    <string name="input_zjc_splite">请输入助记词，以空格分隔</string>
    <string name="delete_walllet_dc">钱包已经删除</string>
    <string name="wallet_da_">刪除钱包</string>
    <string name="accept_address">接收地址</string>
    <string name="available_1000_sde">可转 %1$s %2$s</string>
    <string name="memo_optional">Memo(选填)</string>
    <string name="order_trade_buy">买</string>
    <string name="order_trade_sell">卖</string>

    <string name="trader_curr_a5">撤单</string>
    <string name="trader_curr_a6">撤单中</string>
    <string name="trader_curr_prices">价格(%1$s)</string>
    <string name="trader_curr_amont">剩余量(%1$s)</string>
    <string name="trader_curr_sun">交易额(%1$s)</string>
    <string name="trade_detail_hash">交易哈希</string>
    <string name="trade_detail_type">类型</string>
    <string name="trade_detail_addres">挂单地址</string>
    <string name="trade_detail_zolinga">挂单总量</string>
    <string name="trade_detail_fee">手续费</string>
    <string name="trade_detail_time">时间</string>
    <string name="trade_detail_block">区块</string>
    <string name="trade_detail_statue">状态</string>
    <string name="trade_detail_result">交易结果</string>
    <string name="trade_select_jiid">选择交易对</string>

    <string name="app_update_msg">下载失败，请重新下载或到官网下载</string>

    <string name="wallet_type" translatable="false">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefjhigklmnopqrstuvwxyz0123456789~!@#$%^&amp;*()_+</string>
</resources>