<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <TextView
        android:id="@+id/tv_choose1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/selector_top"
        android:gravity="center"
        android:text="@string/home_create_wallet"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px" />

    <TextView
        android:id="@+id/tv_choose2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/selector_bottom"
        android:gravity="center"
        android:text="@string/home_import_wallet"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@android:color/transparent" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/selector_item_round"
        android:gravity="center"
        android:text="@string/main_dialog_cancle"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@android:color/transparent" />

</LinearLayout>