<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:minHeight="51dp"
       >
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/dialog_psd_title"
            android:textColor="#333333"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="right|center"
            android:paddingLeft="17dip"
            android:paddingRight="17dip"
            android:text="@string/dialog_psd_close"
            android:textColor="#666666"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="28dip"
        android:background="#EEEEEE" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="49dip"
        android:orientation="horizontal"
        android:paddingLeft="14dip">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/dialog_psd_input_psd"
            android:digits="@string/wallet_type"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="40dip"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginRight="5dip"
            android:padding="10dip">

            <CheckBox
                android:id="@+id/lookPwd_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/selector_pic_eye"
                android:button="@null" />
        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginLeft="14dip"
        android:layout_marginRight="15dip"
        android:background="#EEEEEE" />

    <TextView
        android:id="@+id/txt_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dip"
        android:layout_marginBottom="4dip"
        android:paddingLeft="15dip"
        tools:text="密码错误"
        android:textColor="#FF0000"
        android:textSize="14sp" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginBottom="31dip"
        android:background="@drawable/selector_btn_bg"
        android:enabled="false"
        android:text="@string/dialog_psd_ok"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

</LinearLayout>